# storybook

./: .eslintrc.json  package-lock.json  package.json  pnpm-lock.yaml
app/: actions.ts  globals.css  layout.tsx  page.tsx  store.json
app/[bookId]/: page.tsx
app/api/chat/: route.ts
app/api/generate-insight/: route.ts
app/api/mint/: route.ts
app/api/search/: route.ts
app/components/: Canvas.tsx  ChatBlock.tsx  Sidebar.tsx
app/hooks/: useStory.tsx
app/protected/: page.tsx
app/providers/: privyprovider.tsx  web3.tsx
backend/: main.py  pinata_connect.py  pyproject.toml  rag.py  requirements.txt  semantic_cache.pkl  test.py
components/: header-auth.tsx  test-story.tsx
components/ui/: input.tsx
lib/: utils.ts  wagmi.ts
lib/supabase/: middleware.ts  server.ts
