[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["imjwang <ngjaywa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
sentence-transformers = "^3.2.0"
chromadb = "^0.5.15"
scipy = "^1.14.1"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
